20070618 machine.c,spectrum.h,ula.[ch],machines/{pentagon.c,scorpion.c,
	 spec128.c,spec16.c,spec48.c,specplus2a.c,specplus2.c,specplus3.c,
	 specplus3e.c,spec_se.c,tc2048.c,tc2068.c,ts2068.c},z80/{coretest.c,
	 z80_macros.h,z80.pl}: separate out contention when MREQ isn't active,
	 as the +2A/+3 ULA applies contention only when MREQ is active (fixes
	 bug #1723250).
20070622 widget/widget.c,ui/xlib/xdisplay.c: show emulation speed in titlebar
         (part of bug #1686228) (Gergely Szasz).
20070624 ui/xlib/xdisplay.c: formatting fixes (part of bug #1686228) (Gergely
         Szasz).
20070624 ui/xlib/xui.c: set minsize WM hint so we don't resize down to
         nothing, and remove common factors from aspect hints (part of bug
         #1686228) (Gergely Szasz).
20070624 ui/xlib/xui.c: formatting fixes (part of bug #1686228) (Gergely
         Szasz).
20070625 sound/alsasound.c: reduce underruns in ALSA environment (fixes bug
         #1735390) (Gergely Szasz).
20070626 widget/options.pl: move widget posthook so that settings changes are
         available in the uidisplay_hotswap_gfx call (fixes bug #1743318)
         (Gergely Szasz).
20070628 zxatasp.c: remove dead code (Stuart).
20070628 machines/specplus3.c,trdos.c: use better variable names for temporary
	 disk image filenames (Stuart).
20070628 display.c,zxcf.h: remove warnings with -Wstrict-prototypes (Stuart).
20070628 machines/{pentagon.c,scorpion.c,spec16.c,spec48.c,spec_se.c,
	 specplus2a.c,tc2048.c},ui/scaler/scalers.c: remove "'static' is not at
	 beginning of declaration" warning with -Wextra (Stuart).
20070628 menu.h,ui/gtk/gtkjoystick.c: fix menu_options_joysticks_select()'s
	 prototype (Stuart).
20070628 pokefinder/pokefinder.[ch]: make pokefinder_{,im}possible's
	 declarations consistent with their definitions (Stuart).
20070628 ui/gtk/memory.c: fix type of menu_machine_memorybrowser() in its
	 declaration for the GTK+ UI (Stuart).
20070628 ui/gtk/memory.c: fix compilation (Stuart).